@@ -6051,6 +6051,19 @@ name|getAddedRMNode
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|recoverContainersOnNode
+argument_list|(
+name|nodeAddedEvent
+operator|.
+name|getContainerReports
+argument_list|()
+argument_list|,
+name|nodeAddedEvent
+operator|.
+name|getAddedRMNode
+argument_list|()
+argument_list|)
+expr_stmt|;
 break|break;
 case|case
 name|NODE_REMOVED
