@@ -662,6 +662,28 @@ name|resourcemanager
 operator|.
 name|scheduler
 operator|.
+name|fair
+operator|.
+name|FairScheduler
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|resourcemanager
+operator|.
+name|scheduler
+operator|.
 name|fifo
 operator|.
 name|FifoScheduler
@@ -1040,6 +1062,12 @@ block|}
 block|,
 block|{
 name|FifoScheduler
+operator|.
+name|class
+block|}
+block|,
+block|{
+name|FairScheduler
 operator|.
 name|class
 block|}
@@ -1746,6 +1774,19 @@ argument_list|,
 name|usedResources
 argument_list|)
 expr_stmt|;
+comment|// Until YARN-1959 is resolved
+if|if
+condition|(
+name|scheduler
+operator|.
+name|getClass
+argument_list|()
+operator|!=
+name|FairScheduler
+operator|.
+name|class
+condition|)
+block|{
 name|assertEquals
 argument_list|(
 name|availableResources
@@ -1756,6 +1797,7 @@ name|getHeadroom
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 comment|// *********** check appSchedulingInfo state ***********
 name|assertEquals
 argument_list|(
